# llama-stack-provider-instructlab-train

./: README.md  pyproject.toml  run.yaml
.github/workflows/: test-external-providers.yml
providers.d/inline/post_training/: instructlab_train.yaml
src/llama_stack_provider_instructlab_train/: __init__.py  adapter.py  config.py  provider.py
